--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "npx ts-node-dev src/main.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,6 @@
     "@nestjs/core": "^7.6.17",
     "@nestjs/platform-express": "^7.6.17",
     "reflect-metadata": "^0.1.13",
-    "typescript": "^4.3.2"
+    "typescript": "^5.2.2"
   }
 }
